# OpenVirtualKeyboard

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
OpenVirtualKeyboard/: OpenVirtualKeyboard.json  OpenVirtualKeyboard.pro  abstractpositioner.h  commonpositioner.cpp  commonpositioner.h  injectedkeyboardpositioner.cpp  injectedkeyboardpositioner.h  key.cpp  key.h  keyalternativespreview.cpp  keyalternativespreview.h  keyboardcreator.cpp  keyboardcreator.h  keyboardlayoutmodel.cpp  keyboardlayoutmodel.h  keyboardlayoutsprovider.cpp  keyboardlayoutsprovider.h  keyboardlayouttype.h  keyboardstyle.cpp  keyboardstyle.h  keyboardwindowpositioner.cpp  keyboardwindowpositioner.h  keypressinterceptor.cpp  keypressinterceptor.h  keypreview.cpp  keypreview.h  loggingcategory.h  openvirtualkeyboardinputcontext.cpp  openvirtualkeyboardinputcontext.h  openvirtualkeyboardplugin.cpp  openvirtualkeyboardplugin.h  qml.qrc  utils.cpp  utils.h
OpenVirtualKeyboard/qml/: Keyboard.qml  KeyboardLayout.qml  KeyboardRow.qml  KeyboardWindow.qml
OpenVirtualKeyboard/qml/layouts/: alphabet.json  dial.json  digits.json  symbols.json
OpenVirtualKeyboard/qml/style/: DefaultBackground.qml  DefaultBackspaceKeyDelegate.qml  DefaultEnterKeyDelegate.qml  DefaultHideKeyDelegate.qml  DefaultKeyAlternativesPreviewDelegate.qml  DefaultKeyDelegate.qml  DefaultKeyPreviewDelegate.qml  DefaultLanguageKeyDelegate.qml  DefaultLanguageMenu.qml  DefaultNextPageKeyDelegate.qml  DefaultShiftKeyDelegate.qml  DefaultSpaceKeyDelegate.qml  DefaultSpecialKeyDelegate.qml  DefaultSymbolKeyDelegate.qml  Icon.qml  StyleComponents.qml  icon-names.js
example/01_basic/: main.cpp  main.qml
example/02_enter_key_actions/: EnterActionTextField.qml  main.cpp  main.qml  qml.qrc
example/03_custom_style/: main.cpp  main.qml
example/04_custom_layouts/: custom_layouts.pro  main.cpp  main.qml
example/shared/: examples_shared.h
